fix: trying to fix image bug on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -576,6 +576,7 @@ main #portfolio div {
 main #portfolio a {
     margin: auto;
     height: 100%;
+    min-height: 10rem;
     color: black;
 }
 
@@ -588,6 +589,7 @@ main #portfolio div a.hidden {
 }
 
 main #portfolio img {
+    min-height: 10rem;
     height: 100%;
     width: 20rem;
     object-fit: cover;
